fix(criação de setor):
Ajusta problema com concorrência
